@@ -1,0 +1,7 @@
+# this is file .gitignore
+
+# ignore everything in this directory
+*
+
+# but do not ignore this this file
+!.gitignore
